--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,14 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .loginContainer{
-  width: 100%;
+  /* width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000;
+  background-color: #000; */
 }
 
 .loginComponentContainer {
